letPoly/testcases/letPoly/ill-Typed/example2.lam
if zero then true else false